--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 	<div id="navbar-inner">
 		<a href="index.php"><h3>Book Me</h3></a>
 		<ul class="nav">
-			<li><a href="#">Buy</a></li>
+			<li><a href="itemPage.php">Buy</a></li>
 			<li><a href="#">Sell</a></li>
 		</ul>
 		<div class="col-sm-8 col-md-9 pull-right">
