new logo, purple theme

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 <div id="navbar" class="clearfix">
 	<div id="navbar-inner">
-		<a href="index.php"><h3>Book Me</h3></a>
+		<a href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
 		<ul class="nav">
 			<li><a href="itemPage.php">Buy</a></li>
 			<li><a href="#">Sell</a></li>
