--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 <div id="navbar" class="clearfix">
 	<div id="navbar-inner">
-		<a href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
+		<a id="nav-brand" href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
 		<ul class="nav">
 			<li><a href="itemPage.php">Buy</a></li>
 			<li><a href="#">Sell</a></li>
@@ -17,4 +17,5 @@
 			</form>
 		</div>
 	</div>
+	<hr>
 </div>
