new homepage, meeting updates
updated homepage with new look, edited form page

--- a/header2.html
+++ b/header2.html
@@ -2,10 +2,10 @@
 <div id="navbar" class="clearfix">
 	<div id="navbar-inner">
 		<a id="nav-brand" href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
-		<ul class="nav">
+		<!--<ul class="nav">
 			<li><a href="itemPage.php">Buy</a></li>
 			<li><a href="#">Sell</a></li>
-		</ul>
+		</ul>-->
 		<div class="col-sm-8 col-md-9">
 			<form class="navbar-form" role="search">
 				<div class="input-group">
@@ -19,5 +19,5 @@
 			<button id= "post-sale-button" type="button" class="btn btn-default btn-lg">Post a sale!</button>
 		</div>
 	</div>
-	<hr
+	
 </div>
