--- a/formPage.html
+++ b/formPage.html
@@ -19,38 +19,58 @@
 	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	    <![endif]-->
+
 	</head>
 
 	<body><!-- Begin code here --> 
-		<form class="form-horizontal" role="form">
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Remember me
-        </label>
+    <!-- Price, edition --> 
+
+		<form class = "form-horizontal" role = "form">
+      <div class ="form-group">
+        <label for ="inputName" class = "col-sm-1 control-label">Name</label>
+        <div class ="col-sm-4">
+          <input type ="email" class = "form-control" id="inputName" placeholder="Name">
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
-    </div>
-  </div>
-</form>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <div class = "btn-group">
+        <button type = "button" class = "btn btn-default dropdown-toggle" data-toggle="dropdown">
+          Department <span class = "caret"> </span>
+        </button>
+        <ul class = "dropdown-menu" role ="menu">
+          <li><a href = "#">ANTHRO</a></li>
+          <li><a href = "#">BIO </a></li>
+          <li><a href = "#">BME </a></li>
+          <li><a href = "#">CHEM </a></li>
+          <li><a href = "#">EECS </a></li>
+        </ul>
+      </div>
+      <div class = "btn-group">
+        <button type = "button" class = "btn btn-default dropdown-toggle" data-toggle="dropdown">
+          Class Number <span class = "caret"> </span>
+        </button>
+        <ul class = "dropdown-menu" role ="menu">
+          <li><a href = "#">101</a></li>
+          <li><a href = "#">110 </a></li>
+          <li><a href = "#">202 </a></li>
+          <li><a href = "#">211 </a></li>
+          <li><a href = "#">213 </a></li>
+        </ul>
+      </div>
+      <div class = "btn-group">
+        <button type = "button" class = "btn btn-default dropdown-toggle" data-toggle="dropdown">
+          Condition <span class = "caret"> </span>
+        </button>
+        <ul class = "dropdown-menu" role ="menu">
+          <li><a href = "#">New</a></li>
+          <li><a href = "#">Used - Like New </a></li>
+          <li><a href = "#">Used - Good Condition  </a></li>
+          <li><a href = "#">Used - Poor Condition</a></li>
+        </ul>
+      </div>
+
+
+
+		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     	<script src="js/bootstrap.min.js"></script>
 	</body>
 
