additions to form
more form inputs

--- a/formPage.html
+++ b/formPage.html
@@ -56,6 +56,31 @@
           <li><a href = "#">213 </a></li>
         </ul>
       </div>
+
+
+      <div class ="form-group">
+        <label for ="inputTitle" class = "col-sm-1 control-label">Book Title</label>
+        <div class ="col-sm-2">
+          <input type ="email" class = "form-control" id="inputTitle" placeholder="Title">
+        </div>
+      </div>
+
+
+      <div class ="form-group">
+        <label for ="inputAuthor" class = "col-sm-1 control-label">Author</label>
+        <div class ="col-sm-2">
+          <input type ="email" class = "form-control" id="inputAuthor" placeholder="Author">
+        </div>
+      </div>
+
+
+      <div class ="form-group">
+        <label for ="inputPrice" class = "col-sm-1 control-label">Price</label>
+        <div class ="col-sm-2">
+          <input type ="email" class = "form-control" id="inputPrice" placeholder="Price">
+        </div>
+      </div>
+
       <div class = "btn-group">
         <button type = "button" class = "btn btn-default dropdown-toggle" data-toggle="dropdown">
           Condition <span class = "caret"> </span>
@@ -68,6 +93,12 @@
         </ul>
       </div>
 
+      <div class ="form-group">
+        <label for ="inputEdition" class = "col-sm-1 control-label">Edition</label>
+        <div class ="col-sm-2">
+          <input type ="email" class = "form-control" id="inputEdition" placeholder="Edition">
+        </div>
+      </div>
 
 
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
