--- a/formPage.html
+++ b/formPage.html
@@ -1,30 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Textbook Exchange provides Northwestern students with a quick and easy way to buy and sell textbooks from fellow students and compare prices with online vendors">
-		<meta name="author" content="Jon Rovira, William Chou, Christina Kim, Divir Gupta">
-		<link rel="shortcut icon" href="images/Textbook-Xchange-Favicon.png">
-
-		<title>Textbook Exchange</title>
-
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<!--<link href="css/global.css" rel="stylesheet"> --> 
-		<link href="css/formPage.css" rel="stylesheet">
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	    <![endif]-->
-
-	</head>
-
-	<body><!-- Begin code here --> 
-    <!-- Price, edition --> 
-
+<div>
 		<form class = "form-horizontal" role = "form">
       <div class ="form-group">
         <label for ="inputName" class = "col-sm-1 control-label">Name</label>
@@ -100,9 +74,6 @@
         </div>
       </div>
 
+      <button type="button" class="btn btn-default btn-sm">Submit</button>
 
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    	<script src="js/bootstrap.min.js"></script>
-	</body>
-
-</html>
+</div>
