renames, cleaning up

--- a/header.html
+++ b/header.html
@@ -3,8 +3,8 @@
 	<div id="navbar-inner">
 		<a id="nav-brand" href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
 		<ul class="nav">
-			<li><a href="itemPage.php">Buy</a></li>
-			<li><a href="#">Sell</a></li>
+			<li><a href="book.php">Buy</a></li>
+			<li><a href="sell.php">Sell</a></li>
 		</ul>
 		<div class="col-sm-8 col-md-9 pull-right">
 			<form class="navbar-form" role="search">
