--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div id="navbar" class="clearfix">
 	<div id="navbar-inner">
-		<a id="nav-brand" href="index.php"><img src="images/Textbook-Xchange-Logo.png" /></a>
+		<a id="nav-brand" href="/"><img src="images/Textbook-Xchange-Logo.png" /></a>
 		<ul class="nav">
 			<li><a href="book.php">Buy</a></li>
 			<li><a href="sell.php">Sell</a></li>
