--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
 		<div class="col-sm-8 col-md-9 pull-right">
 			<form class="navbar-form" role="search">
 				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Search by book title, author, or class number" name="srch-term" id="srch-term">
+					<input type="text" class="form-control" placeholder="Search by book title, author, or class #" name="srch-term" id="srch-term">
 					<div class="input-group-btn">
 						<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 					</div>
