--- a/searchResults.html
+++ b/searchResults.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Textbook Exchange</title>
+  <link rel="shortcut icon" href="images/Textbook-Xchange-Favicon.png">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/searchResults.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -12,6 +13,13 @@
 
 <body>
 <div class="container">
+	<div class="input-group">
+		<input type="text" class="form-control" placeholder="C++">
+		<div class="input-group-btn">
+			<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+		</div>
+	</div>
+
 	<ul class="box">
 		<li>
 			<div class="image">
