--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 	<div id="navbar-inner">
 		<a id="nav-brand" href="/"><img src="images/Textbook-Xchange-Logo.png" /></a>
 		<ul class="nav">
-			<li><a href="book.php">Buy</a></li>
+			<li><a href="searchResults.php">Buy</a></li>
 			<li><a href="sell.php">Sell</a></li>
 		</ul>
 		<div class="col-sm-8 col-md-9 pull-right">
