--- a/header.html
+++ b/header.html
@@ -1,20 +1,28 @@
-<div id="navbar" class="clearfix">
-	<div id="navbar-inner">
-		<a id="nav-brand" href="/"><img src="images/Textbook-Xchange-Logo.png" /></a>
-		<ul class="nav">
-			<li><a href="searchResults.php">Buy</a></li>
-			<li><a href="sell.php">Sell</a></li>
-		</ul>
-		<div class="col-sm-8 col-md-9 pull-right">
-			<form class="navbar-form" role="search">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Search by book title, author, or class #" name="srch-term" id="srch-term">
-					<div class="input-group-btn">
-						<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-	<hr>
-</div>
+<nav id="top-nav" class="navbar navbar-default" role="navigation">
+ <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><img src="images/Textbook-Xchange-Logo.png" /></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search by book title, author, or class #">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="searchResults.php">Buy a book</a></li>
+        <li><a href="sell.php">Sell a book</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
