--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       		<form class="navbar-form navbar-left" role="search">
         		<div class="form-group">
-          			<input type="text" class="form-control" placeholder="Search by book title, author, or class #">
+          			<input type="text" class="form-control">
         		</div>
         		<button type="submit" class="btn btn-default">Search</button>
       		</form>
