--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
         		</div>
         		<button type="submit" class="btn btn-default">Search</button>
       		</form>
-      		<ul class="nav navbar-nav navbar-right">
+      		<ul class="nav navbar-nav navbar-left">
         		<li><a href="searchResults.php">Buy a book</a></li>
         		<li><a href="sell.php">Sell a book</a></li>
       		</ul>
